# LcStudy

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  REFACTOR_PLAN.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: ci.yml
examples/: README.md
src/lcstudy/: .eslintrc.json  .gitignore  .vercelignore  README.md  cli.py  e2e-smoke.spec.js  engines.py  exceptions.py  install.py  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  webapp.py
src/lcstudy/app/: globals.css  layout.tsx  page.tsx
src/lcstudy/components/: auth-controls.tsx  dashboard.tsx  providers.tsx  stats-dashboard.tsx
src/lcstudy/config/: logging.py  settings.py
src/lcstudy/controllers/: compat_controller.py  deps.py  errors.py  health_controller.py  history_controller.py  session_controller.py
src/lcstudy/data/: games.json  maia-elo-calibration.json
src/lcstudy/docs/: ARCHITECTURE.md
src/lcstudy/domain/: models.py  validation.py
src/lcstudy/lib/: api-utils.ts  auth.ts  coach.ts  db.ts  games.ts  maia-elo.ts  sessions.ts  (+3 more)
tests/: test_cli_no_seeds_flag.py  test_cli_up_browser.py  test_domain_models.py  test_game_service.py  test_generate_games_maia2.py  test_repositories.py  test_validation.py
tools/: README.md  audit_lichess_openings.py  build_lichess_opening_tree.py  calibrate_maia_elo.py  generate_games.py  generate_games_maia2.py  lc0-apple-silicon.config  reanalyze_games.py
(+1922 files in other folders)
